--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,11 @@ jobs:
           - target: darwin-x64
             host: macos-latest
 
+          - target: darwin-arm64
+            host: macos-latest
+            docker: arm64v8/node
+            platform: darwin/arm64
+
           - target: linux-x64
             host: ubuntu-latest
 
