--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "license": "",
+  "license": "MIT",
   "main": "index.js",
   "files": [
     "index.js",
